--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-6">
           <div class="details">
-            <h2>Name: {{detailedInfo.name}}</h2>
+            <h2>Name - {{detailedInfo.name}}</h2>
 			<div class="info-dets">
             <p>Address: {{detailedInfo.address}}</p>
             <p>Building Code: {{detailedInfo.code}}</p>
