--- a/login folder/login.html
+++ b/login folder/login.html
@@ -28,6 +28,12 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 <!--===============================================================================================-->
 
+<style>
+img {
+  width: 1000px;
+}
+</style>
+
 </head>
 <body>
 
@@ -92,7 +98,29 @@
 
 				</form>
 
-				<div class="login100-more" style="background-image: url('images/bg-01.jpg');"></div>
+					<!--Left side of the page-->
+				<p class = leftside>
+
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					Create a New Bubble <br> When You're Using Scrumble!
+					<br>
+					<br>
+					<span class="mission-header">
+						Mission Statement
+					</span>
+					<br>
+					<span class="mission-statement">
+						“With Scrumble, we aim to pair like-minded individuals looking to improve
+						their skills in an area of expertise. We provide a space to create communities
+						with people interested in similar subjects, whether experienced or inexperienced.
+						You will seamlessly be connected with either a mentor or mentee, based on your
+						preference, and feel fulfillment as you provide guidance or gain important knowledge in your field of interest.”
+					</span>
 			</div>
 		</div>
 	</div>
