User can view their own profile

--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,8 @@ img {
 			<div class="container-login100">
 				<div class="wrap-login100">
 					<form class="login100-form validate-form">
-						<span class="login100-form-title p-b-20">
-							Login
+						<span class="login100-form-title p-b-20" style="text-align:left; font-size: 15px">
+							Fill out the form below to sign up or login.
 						</span>
 							<div ng-if="errors.length > 0" style=" width: 100%;">
 								<p style=" font-family: Arial">Oops! Something went wrong.</p>
@@ -48,7 +48,7 @@ img {
 
 						<div class="container-login100-form-btn p-b-20">
 							<button class="login100-form-btn" ng-click="signUp()">
-								Sign in
+								Sign Up
 							</button>
 						</div>
 
