Ready for Heroku

--- a/client/create.html
+++ b/client/create.html
@@ -170,7 +170,7 @@ Select Option (Drop down)
   Details you want others to know:
 </label>
 <div>
- <textarea name="about" rows="10" cols="80" ng-model="add_info"></textarea>
+ <textarea name="about" rows="10" cols="80" ng-model="newProfile.add_info"></textarea>
 </div>
  <div>
  <button ng-click="profileAdd()"> Submit </button>
