--- a/client/update.html
+++ b/client/update.html
@@ -24,7 +24,7 @@ Select Option (Drop down)
 </form>
 -->
  <body ng-app="directoryApp">
-	<div ng-controller="ListingsController" data-ng-init="profileLoad()">
+	<div ng-controller="ListingsController">
   <div class="row ">
         <div class="container main-page" >
   <form style = "margin-top: 10px; margin-left: 20px;">
