--- a/client/update.html
+++ b/client/update.html
@@ -39,7 +39,7 @@ Select Option (Drop down)
       Username
     </label>
   </p>
-  <input type=text" name="username" ng-model="newProfile.username">
+  <input type=text" name="username">
 
 </div>
 
