--- a/client/login.html
+++ b/client/login.html
@@ -24,8 +24,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="styles/util.css">
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="util.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 <!--===============================================================================================-->
 
 <style>
@@ -46,7 +46,7 @@ img {
 					</span>
 
 					<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
-						<input id="first-name" class="input100" type="text" name="username" placeholder="User name">
+						<input id="first-name" class="input100" type="text" name="username" placeholder="Username">
 						<span class="focus-input100"></span>
 					</div>
 					<div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
@@ -56,7 +56,7 @@ img {
 
 					<div class="container-login100-form-btn p-b-20">
 						<button class="login100-form-btn">
-							Sign in
+							Log In
 						</button>
 					</div>
 
