--- a/client/create.html
+++ b/client/create.html
@@ -40,7 +40,7 @@ Select Option (Drop down)
       Username
     </label>
   </p>
-  <input type=text" name="username" ng-model="newProfile.username">
+  <input type="text" name="username" ng-model="newProfile.username">
 
 </div>
 
@@ -189,6 +189,6 @@ Select Option (Drop down)
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
-	
+
 </body>
 </html>
