--- a/client/update.html
+++ b/client/update.html
@@ -39,7 +39,7 @@ Select Option (Drop down)
       Username
     </label>
   </p>
-  <input type=text" name="username">
+  <input type="text" name="username">
 
 </div>
 
@@ -188,6 +188,6 @@ Select Option (Drop down)
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
-	
+
 </body>
 </html>
