--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@ img {
 	<div class= "col-container" id="equal">
 		<!--Left side of the page-->
 				<div class = "span-6 leftside">
-		<span style = "font-family: Arial;">
+		<span style = "font-family: Arial; text-shadow: 2px 2px black;">
 			<span class= motto-spacing1>
 			 Create a New Bubble
 			 <br>
@@ -47,7 +47,7 @@ img {
 					<form class="login100-form validate-form">
 						<a href="https://imgbb.com/"><img src="https://i.ibb.co/ZKVGWpD/scrumblelogo-Final.png" alt="scrumblelogo-Final" style="width:400px; length:400px; padding-left:50px; padding-bottom:60px;" border="0"></a>
 						<span class="login100-form-title p-b-20" style="text-align:left; font-size: 15px">
-							Fill out the form below to sign up or login.
+							Fill out the form below to sign up or login
 						</span>
 							<div ng-if="errors.length > 0" style=" width: 100%;">
 								<p style=" font-family: Arial">Oops! Something went wrong.</p>
