--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -3,9 +3,9 @@
 <head>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/base.css">
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="styles/menu.css">
 <style>
 img {
   width: 100px;
