--- a/client/viewprofile.html
+++ b/client/viewprofile.html
@@ -3,10 +3,10 @@
 <head>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style2.css">
-  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="styles/style2.css">
+  <link rel="stylesheet" href="styles/menu.css">
 <style>
 img {
   width: 100px;
