--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -28,12 +28,12 @@ Select Option (Drop down)
 <body>
   <div class="row ">
     <div class="subnav container" id="customNav">
-    <a href="dashboard.html" class="home active">Home Page</a>
-    <a href= "viewprofile.html"> Profile </a>
-    <a href= "matchresults.html"> Find Mentors </a>
-    <a href= "viewprofile.html"> Mentee Requests </a>
-    <a href= "viewprofile.html"> Matches </a>
-    <a href= "login.html"> Log Out </a>
+      <a href="dashboard.html" class="home active">Home Page</a>
+      <a href= "viewprofile.html"> Profile </a>
+      <a href= "matchresults.html"> Find Mentors </a>
+      <a href= "menteerequests.html"> Mentee Requests </a>
+      <a href= "matchlist.html"> Matches </a>
+      <a href= "login.html"> Log Out </a>
     </div>
         <div class="container main-page">
   <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;">
