--- a/client/menteerequests.html
+++ b/client/menteerequests.html
@@ -23,7 +23,7 @@
       <div class="row" ng-controller="ListingsController">
 
       <!--  <div class="col-md-6"> -->
-          <h1 style="margin-left: 40%">Mentor List</h1>
+          <h1 style="margin-left: 40%">Mentee Requests</h1>
           <div class="input-group" id="searchBar">
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
             <input type="text" class="form-control" placeholder="Search" ng-model="query">
