--- a/client/matchedprofileview.html
+++ b/client/matchedprofileview.html
@@ -29,12 +29,12 @@ Select Option (Drop down)
 <body>
   <div class="row ">
     <div class="subnav container" id="customNav">
-    <a href="dashboard.html" class="home active">Home Page</a>
-    <a href= "viewprofile.html"> Profile </a>
-    <a href= "matchresults.html"> Find Mentors </a>
-    <a href= "menteerequests.html"> Mentee Requests </a>
-    <a href= "matchlist.html"> Matches </a>
-    <a href= "login.html"> Log Out </a>
+      <a href="dashboard.html" class="home active">Home Page</a>
+      <a href= "viewprofile.html"> Profile </a>
+      <a href= "matchresults.html"> Find Mentors </a>
+      <a href= "menteerequests.html"> Mentee Requests </a>
+      <a href= "matchlist.html"> Matches </a>
+      <a href= "login.html"> Log Out </a>
   </div>
         <div class="container main-page">
   <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;">
@@ -194,6 +194,8 @@ Additional Info:
   <span class="fa fa-star checked" id = "star3" name = "star3"></span>
   <span class="fa fa-star" id = "star4" name = "star4"></span>
   <span class="fa fa-star" id = "star5" name = "star5"></span>
+  <br>
+  <button> Rate Mentor </button>
 </div>
 
 <br>
@@ -208,7 +210,7 @@ Additional Info:
 </div>
 
  <div>
- <button> Back To Results </button>
+ <button> Back To List </button>
 </div>
 </form>
 </div>
