--- a/client/viewprofile.html
+++ b/client/viewprofile.html
@@ -29,12 +29,12 @@ Select Option (Drop down)
 <body>
   <div class="row ">
     <div class="subnav container" id="customNav">
-    <a href="dashboard.html" class="home active">Home Page</a>
-    <a href= "viewprofile.html"> Profile </a>
-    <a href= "matchresults.html"> Find Mentors </a>
-    <a href= "viewprofile.html"> Mentee Requests </a>
-    <a href= "viewprofile.html"> Matches </a>
-    <a href= "login.html"> Log Out </a>
+      <a href="dashboard.html" class="home active">Home Page</a>
+      <a href= "viewprofile.html"> Profile </a>
+      <a href= "matchresults.html"> Find Mentors </a>
+      <a href= "menteerequests.html"> Mentee Requests </a>
+      <a href= "matchlist.html"> Matches </a>
+      <a href= "login.html"> Log Out </a>
   </div>
         <div class="container main-page">
   <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;">
@@ -189,11 +189,11 @@ Additional Info:
     Rating:
   </label>
   <br>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star"></span>
-  <span class="fa fa-star"></span>
+  <span class="fa fa-star checked" id = "star1" name = "star1"></span>
+  <span class="fa fa-star checked" id = "star2" name = "star2"></span>
+  <span class="fa fa-star checked" id = "star3" name = "star3"></span>
+  <span class="fa fa-star" id = "star4" name = "star4"></span>
+  <span class="fa fa-star" id = "star5" name = "star5"></span>
 </div>
 
 <br>
