--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
 	<div class = "span-6 omega">
 		<div class= "col">
 					<form class="login100-form validate-form">
-						<a href="https://imgbb.com/"><img src="https://i.ibb.co/ZKVGWpD/scrumblelogo-Final.png" alt="scrumblelogo-Final" style="width:400px; length:400px; padding-left:50px; padding-bottom:60px;" border="0"></a>
+						<img src="https://i.ibb.co/ZKVGWpD/scrumblelogo-Final.png" alt="scrumblelogo-Final" style="width:400px; length:400px; padding-left:50px; padding-bottom:60px;" border="0">
 						<span class="login100-form-title p-b-20" style="text-align:left; font-size: 15px">
 							Fill out the form below to sign up or login
 						</span>
@@ -49,11 +49,11 @@
 							</div>
 
 						<div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
-							<input id="first-name" class="input100" type="email" name="username" placeholder="Email" ng-model="newListing.email">
+							<input id="first-name" class="input100" type="email" name="username" placeholder="Email" ng-model="existingProfile.email">
 							<span class="focus-input100"></span>
 						</div>
 						<div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Typealpassword">
-							<input class="input100" type="password" name="pass" placeholder="Password" ng-model="newListing.password">
+							<input class="input100" type="password" name="password" placeholder="Password" ng-model="existingProfile.password">
 							<span class="focus-input100"></span>
 						</div>
 						<div class="container-login100-form-btn p-b-20">
@@ -62,7 +62,7 @@
 							</button>
 						</div>
 						<div class="container-login100-form-btn p-b-20">
-							<button class="login100-form-btn" ng-click="signUp()">
+							<button class="login100-form-btn" ng-click="getSignUp()">
 								Sign Up
 							</button>
 						</div>
@@ -81,23 +81,8 @@
 			</div>
 	</div>
 </div>
-
-	<!--<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="vendor/animsition/js/animsition.min.js"></script>
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-	<script src="vendor/select2/select2.min.js"></script>
-	<script>
-		$(".selection-2").select2({
-			minimumResultsForSearch: 20,
-			dropdownParent: $('#dropDownSelect1')
-		});
-	</script>-->
-
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
 	<script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
 	<script src="js/main.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
