--- a/client/signup.html
+++ b/client/signup.html
@@ -5,54 +5,59 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body >
+  <body ng-app="directoryApp">
+	<div ng-controller="ListingsController">
   <div class="row ">
         <div class="container main-page">
-  <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;" method = "get">
+  <form style = "margin-top: 10px; margin-left: 20px;">
 <div style = " background-color: lightgrey; width: 400px;" class = centerhorizontal>
 <h1 class = centerhorizontal> Sign Up </h1>
   <div class = centerhorizontal>
-    <label class = "textboxquestion"> Name: </label>
+  		<div ng-if="errors.length > 0" style=" width: 100%;">
+			<p style=" font-family: Arial">Oops! Something went wrong.</p>
+				<p ng-repeat="error in errors" style=" font-family: Arial">{{error}}</p>
+		</div>
+    <label class = "textboxquestion"> Username: </label>
     <br>
-  <input type="text" name="name" id="name" required aria-required="true" class = "inputcheck">
+  <input type="text" name="name" id="name" required aria-required="true" class = "inputcheck" ng-model="newProfile.username">
 </div>
 <br>
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Email: </label>
   <br>
-<input type="text" name="email" id="email" required aria-required="true" class = "inputcheck">
+<input type="email" name="email" id="email" required aria-required="true" class = "inputcheck" ng-model="newProfile.email">
 </div>
 <br>
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Confirm Email: </label>
   <br>
-<input type="text" name="confirmemail" id="confirmemail" required aria-required="true" class = "inputcheck">
+<input type="email" name="confirmemail" id="confirmemail" required aria-required="true" class = "inputcheck" ng-model="newProfile.emailCheck">
 </div>
 <br>
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Password: </label>
   <br>
-<input type="text" name="password" id="password" required aria-required="true" class = "inputcheck">
+<input type="password" name="password" id="password" required aria-required="true" class = "inputcheck" ng-model="newProfile.password">
 </div>
 <br>
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Confirm Password: </label>
   <br>
-<input type="text" name="confirmpassword" id="confirmpassword" required aria-required="true" class = "inputcheck">
+<input type="password" name="confirmpassword" id="confirmpassword" required aria-required="true" class = "inputcheck" ng-model="newProfile.passwordCheck">
 </div>
 <br>
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Age: </label>
   <br>
-<input type="text" name="age" id="age" required aria-required="true" class = "inputcheck">
+<input type="number" name="age" id="age" required aria-required="true" class = "inputcheck" ng-model="newProfile.age">
 </div>
 <br>
 
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Gender: </label>
   <br>
-  <select id = "gender" name = "gender" required aria-required="true">
-  <option value="Null"> </option>
+  <select id = "gender" name = "gender" required aria-required="true" ng-model="newProfile.gender">
+  <option selected disabled> </option>
   <option value="Male">Male</option>
   <option value="Female">Female</option>
   <option value="Nonbinary"> Non-binary </option>
@@ -64,8 +69,8 @@
 <div class = centerhorizontal>
   <label class = "textboxquestion"> Ethnicity/Race: </label>
   <br>
-  <select id = "demographic" name = "demographic" required aria-required="true">
-  <option value="Null"> </option>
+  <select id = "demographic" name = "demographic" required aria-required="true" ng-model="newProfile.ethnicity">
+  <option selected disabled> </option>
   <option value="Nativeamerican">Native American</option>
   <option value="Africanamerican">African American</option>
   <option value="Middleeastern">Middle Eastern</option>
@@ -79,10 +84,11 @@
 </div>
 
 <div>
-  <button class = "centerhorizontal" style = "background-color: lightgreen;" onclick="validate()"> Submit <script> validate(); </script></button>
+  <button class = "centerhorizontal" style = "background-color: lightgreen;" ng-click="signUp()"> Submit</button>
 </div>
 </div>
-<script>
+</div>
+<!--<script>
 function validate()
 {
  var ddl = document.getElementById("gender");
@@ -96,9 +102,18 @@ function validate()
      }
 }
 
-</script>
+</script>-->
 </form>
 </div>
 </div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/factories/listingFactory.js"></script>
+    <script src="js/controllers/listingController.js"></script>
+
+
 </body>
 </html>
