--- a/client/profile.html
+++ b/client/profile.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" type="text/css" href="styles/base.css">
   <link rel="stylesheet" href="menu.css">
+  <script src="https://code.angularjs.org/1.4.3/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
@@ -27,7 +28,24 @@
 <div>
   <button> View Profile Picture </button>
 </div>
-
+<div>
+  <p>
+    <label class="bold">
+    Username
+  </label>
+ </p>
+  <p id = "menteesubjectvar"> {{userProfile.username}}</p>
+</div>
+<br>
+<div>
+  <p>
+    <label class="bold">
+    Aavailable
+  </label>
+ </p>
+  <p id = "menteesubjectvar" style="text-transform:capitalize;"> {{userProfile.available}}</p>
+</div>
+<br>
 <div>
  <p style="padding-right: 10px;">
    <label class="bold">
@@ -136,7 +154,7 @@
 </div>
 
  <div>
- <button> Edit Profile </button>
+ <a href="update.html" style="color:blue;"> Edit Profile </button>
 </div>
 </form>
 </div>
