--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -37,30 +37,41 @@ Select Option (Drop down)
     </div>
         <div class="container main-page">
   <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;">
-
-<h1 class = centerhorizontal2> Features </h1>
+<div class="span-12 omega">
+<h1> Features </h1>
+</div>
 
 <div style="width: 100%; overflow: hidden; display: flex;">
-
-<div class = backgroundgreen style = "width: 25%; padding: 10px; margin-right: 10px">
+<div class="span-3">
+<div class = backgroundgreen style = "padding: 10px; margin-right: 10px">
 <label class = bold> Profile Editing: </label>
 <p> You can manage your profile information, change your preferences for matching, and change your status as a mentee and mentor.
     You may also view your profile and rating. </p>
 </div>
+</div>
 
-<div class = backgroundgrey style = "width: 25%; padding: 10px; margin-right: 10px">
+<div class="span-3">
+<div class = backgroundgrey style = "padding: 10px; margin-right: 10px">
 <label class = bold> Mentor Requests: </label>
 <p> You can look up a list of available mentors, view their profiles, and send a request to add them. </p>
+<br>
+<br>
+</div>
 </div>
 
-<div class = backgroundblue style = "width: 25%; padding: 10px; margin-right: 10px">
+<div class="span-3">
+<div class = backgroundblue style = "padding: 10px; margin-right: 10px">
 <label class = bold> Mentee Requests: </label>
 <p> You can view a list of users who want you to be their mentor, look at thier profiles, and either accept or decline their request. </p>
+<br>
+</div>
 </div>
 
-<div class = "backgroundred" style = "width: 25%; padding: 10px">
+<div class="span-3 omega">
+<div class = "backgroundred" style = "padding: 10px">
 <label class = bold> Match Viewing: </label>
 <p> You can look at the list of people who you are matched with, and if your relation to them is mentee, you can rate them as mentors when you view their profile </p>
+</div>
 </div>
 
 </div>
