--- a/client/matchedprofileview.html
+++ b/client/matchedprofileview.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style2.css">
   <link rel="stylesheet" href="styles/menu.css">
+  <link rel="stylesheet" href="styles/base.css">
 <style>
 img {
   width: 100px;
@@ -36,6 +37,7 @@ Select Option (Drop down)
       <a href= "matchlist.html"> Matches </a>
       <a href= "login.html"> Log Out </a>
   </div>
+  <div class=span-12 omega style="text-align:left !important">
         <div class="container main-page">
   <form action="/action_page.php" style = "margin-top: 10px; margin-left: 20px;">
 
@@ -213,6 +215,7 @@ Additional Info:
  <button> Back To List </button>
 </div>
 </form>
+</div>
 </div>
 </div>
 <script>
