--- a/client/matchresults.html
+++ b/client/matchresults.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/menu.css">
 
   </head>
@@ -23,7 +23,8 @@
       <div class="row" ng-controller="ListingsController">
 
       <!--  <div class="col-md-6"> -->
-          <h1 style="margin-left: 40%">Mentor List</h1>
+      <div class="span-12 omega">
+          <h1 style="margin-left:40%">Mentor List</h1>
           <div class="input-group" id="searchBar">
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
             <input type="text" class="form-control" placeholder="Search" ng-model="query">
@@ -46,7 +47,7 @@
               </tr>
             </table>
           </div>
-
+        </div>
         </div>
 
       </div>
