--- a/client/profile.html
+++ b/client/profile.html
@@ -10,6 +10,32 @@
     <script src="js/app.js"></script>
     <script src="js/factories/listingFactory.js"></script>
     <script src="js/controllers/listingController.js"></script>
+	
+	<style>
+	.rating {
+		color: #a9a9a9;
+		margin: 0;
+		padding: 0;
+	}
+	ul.rating {
+		display: inline-block;
+	}
+	.rating li {
+		list-style-type: none;
+		display: inline-block;
+		padding: 1px;
+		text-align: center;
+		font-weight: bold;
+		cursor: pointer;
+		font-size:20px;
+	}
+	.rating .filled {
+		color: orangered;
+	}
+	.clear{
+	  margin-top:20px;
+	}
+	</style>
 </head>
 <body ng-app="directoryApp">
 	<div ng-controller="ListingsController"  data-ng-init="profileLoad()">
@@ -141,18 +167,16 @@
 
 <br>
 
-<div>
-  <label class="bold">
+ <label class="bold">
     Your Rating
   </label>
-  <br>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star checked"></span>
-  <span class="fa fa-star"></span>
-  <span class="fa fa-star"></span>
-</div>
 
+
+	<div ng-repeat="rating in ratings">
+		<p>{{rating.current}} / {{rating.max}}</p>
+        <div star-rating rating-value="rating.current" max="rating.max" on-rating-selected="getSelectedRating(rating)"></div>
+    </div>
+	<button type="button" data-ng-click="sendRate()">Rate this User</button>
  <div>
  <a href="update.html" style="color:blue;"> Edit Profile </button>
 </div>
