View User other user working on back end

--- a/client/profile.html
+++ b/client/profile.html
@@ -176,9 +176,9 @@
 		<p>{{rating.current}} / {{rating.max}}</p>
         <div star-rating rating-value="rating.current" max="rating.max" on-rating-selected="getSelectedRating(rating)"></div>
     </div>
-	<button type="button" data-ng-click="sendRate()">Rate this User</button>
  <div>
- <a href="update.html" style="color:blue;"> Edit Profile </button>
+ <a href="update.html" style="color:blue;"> Edit Profile </a>
+ <button type="button" data-ng-click="viewOtherUser()">View User</button>
 </div>
 </form>
 </div>
