color changes for bottom

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -93,33 +93,33 @@
 <div style="width: 100%; overflow: hidden; display: flex;">
 <div class="span-3">
 <div class = backgroundgreen style = "padding: 10px; margin-right: 10px">
-<label class = bold> Profile Editing: </label>
-<p> You can manage your profile information, change your preferences for matching, and change your status as a mentee and mentor.
+<label class = bold style="color: white; text-shadow: 1px 1px black;"> Profile Editing: </label>
+<p style="color: white; text-shadow: 1px 1px black;"> You can manage your profile information, change your preferences for matching, and change your status as a mentee and mentor.
     You may also view your profile and rating. </p>
 </div>
 </div>
 
 <div class="span-3">
 <div class = backgroundgrey style = "padding: 10px; margin-right: 10px">
-<label class = bold> Mentor Requests: </label>
-<p> You can look up a list of available mentors, view their profiles, and send a request to add them. </p>
+<label class = bold  style="color: white; text-shadow: 1px 1px black;"> Mentor Requests: </label>
+<p style="color: white; text-shadow: 1px 1px black;"> You can look up a list of available mentors, view their profiles, and send a request to add them. </p>
 <br>
 <br>
 </div>
 </div>
 
 <div class="span-3">
-<div class = backgroundblue style = "padding: 10px; margin-right: 10px">
-<label class = bold> Mentee Requests: </label>
-<p> You can view a list of users who want you to be their mentor, look at thier profiles, and either accept or decline their request. </p>
+<div class = backgroundgreen style = "padding: 10px; margin-right: 10px">
+<label class = bold style="color: white; text-shadow: 1px 1px black;"> Mentee Requests: </label>
+<p style="color: white; text-shadow: 1px 1px black;"> You can view a list of users who want you to be their mentor, look at thier profiles, and either accept or decline their request. </p>
 <br>
 </div>
 </div>
 
 <div class="span-3 omega">
-<div class = "backgroundred" style = "padding: 10px">
-<label class = bold> Match Viewing: </label>
-<p> You can look at the list of people who you are matched with, and if your relation to them is mentee, you can rate them as mentors when you view their profile </p>
+<div class = "backgroundgrey" style = "padding: 10px">
+<label class = bold style="color: white; text-shadow: 1px 1px black;"> Match Viewing: </label>
+<p style="color: white; text-shadow: 1px 1px black;"> You can look at the list of people who you are matched with, and if your relation to them is mentee, you can rate them as mentors when you view their profile </p>
 </div>
 </div>
 
