Rating system is working

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -21,7 +21,7 @@
       <a href= "/profile"> Profile </a>
       <a href= "/mentors"> Find Mentors </a>
       <a href= "/mentees"> Mentee Requests </a>
-      <a href= "matchlist.html"> Mentor Matches </a>
+      <a href= "/matches"> Mentor Matches </a>
       <a href= "/logout"> Log Out </a>
     </div>
         <div class="container main-page">
