--- a/client/matchresults.html
+++ b/client/matchresults.html
@@ -17,7 +17,7 @@
       <a href= "/profile"> Profile </a>
       <a href= "/mentors" class="active"> Find Mentors </a>
       <a href= "/mentees"> Mentee Requests </a>
-      <a href= "matchlist.html"> Mentor Matches </a>
+      <a href= "/matches"> Mentor Matches </a>
       <a href= "/logout"> Log Out </a>
     </div>
     <div class="container">
@@ -43,6 +43,7 @@
                 <th>View Profile</th>
                 <th>Add</th>
               </tr>
+			  <tr ng-if="!mentors"><td colspan="3" style="text-align:center">No new mentor matches.</td></tr>
               <tr ng-repeat="mentor in mentors | filter: { code: query }">
                 <td>{{mentor.mentor_name}}</td>
                 <td><a ng-click="viewOtherUser(mentor.mentor_name,mentor.status)">View Profile</a></td>
