--- a/client/profile.html
+++ b/client/profile.html
@@ -19,7 +19,7 @@
       <a href= "/profile" class="active"> Profile </a>
       <a href= "/mentors"> Find Mentors </a>
       <a href= "/mentees"> Mentee Requests </a>
-      <a href= "matchlist.html"> Mentor Matches </a>
+      <a href= "/matches"> Mentor Matches </a>
       <a href= "/logout"> Log Out </a>
     </div>
         <div class="container main-page">
